# D-Gate

./: .gitignore  PROJECT_PLAN.md  README.md  config.yaml  pyproject.toml  requirements.txt
finetune/configs/: lora_default.yaml
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/aws-eks/: hpa.yaml  kustomization.yaml
k8s/overlays/cpu/: kustomization.yaml
k8s/overlays/gpu/: kustomization.yaml
monitoring/grafana/dashboards/: inference.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
